@@ -116,6 +116,7 @@ $reasons = array(
         'dnsbl-lookup.cgi',
         'Domain/IP address is blocked by the reputation server',
         'Email rejected due to security policies',
+        'filter has classified this message as spam',
         'envelope blocked',
         'High probability of spam',
         'incoming email as possible spam',
@@ -124,6 +125,7 @@ $reasons = array(
         'is blacklisted',
         'is currently blacklisted',
         'is restricted',
+        'Junk mail received',
         'like spam or phish to me',
         'Local Policy Violation',
         'Mail refused by local domain enforcement policy',
@@ -194,6 +196,7 @@ $reasons = array(
         'Mailbox full',
         'mailbox is full',
         'mailfolder is full',
+        'Mailbox ist voll',
         'over quota',
         'over the allowed quota',
         'quota exceeded',
