@@ -1,1 +1,1 @@
-<p>This tab lists each bounce and an interpretation of the reason for the bounce. The reasons are held in a file, reasons.php, to which further bounce reasons can be added.</p><table><tr><td>Bounce ID</td><td>The bounce ID. This is a link to a page showing full details of the bounce.</td></tr><tr><td>User email</td><td>The email address of the user. This is a link to the user page.</td></tr><tr><td>Msg ID</td><td>The ID of the message that bounced. This is a link to a page to view the message.</td></tr><tr><td>Reason</td><td>An interpretation of the bounce reason.</td></tr></table>
+<p>This tab lists each bounce and an interpretation of the reason for the bounce. The reasons are held in a file, reasons.php, to which further bounce reasons can be added.</p><table><tr><td>Bounce ID</td><td>The bounce ID. This is a link to a page showing full details of the bounce.</td></tr><tr><td>User email</td><td>The email address of the user. This is a link to the user page.</td></tr><tr><td>Msg ID</td><td>The ID of the message that bounced. This is a link to a page to view the message.</td></tr><tr><td>Date</td><td>The date/time that the bounce was processed by phplist.</td></tr><tr><td>Reason</td><td>An interpretation of the bounce reason.</td></tr></table>
